--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "pug": "^2.0.3",
     "shorthash": "^0.0.2",
     "validate": "^4.5.1",
     "validator": "^10.7.0"
