--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.3",
     "express-useragent": "^1.0.12",
     "fs-extra": "^7.0.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
